crates/wac-parser/tests/resolution/fail/mismatched-func-result-type.wac
import x: interface {
    f: func() -> (a: string, b: string);
};

let i = new foo:bar { x };
